--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8"/>
 	<title>Usuarios</title>
 </head>
 <body>
-<p>hola como estas</p>
-<script> type="text/javascript" src="assets/js/javascript.js"</script>
+<h1>Usuarios</h1>
+<script type="text/javascript" src="assets/js/javascript.js"></script>
 </body>
 </html>
